sort.basic.bubble.AlgBubbleSort1.scala.error
Erreur de compilation :
AlgBubbleSort1:7: error: illegal start of simple expression
  while (m!=n)){
              ^